@@ -1,4 +1,8 @@
 2005-02-22  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>
+	
+	* import_tiger.c: Removed some debug output.
+
+2005-02-22  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>
 
 	* import_tiger.c: Added extracting of polygon labels.
 	* map.c: Added polygon label drawing.
